--- a/static/main.css
+++ b/static/main.css
@@ -1,59 +1,103 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f0f0;
-}
+@keyframes roll {
+  0% { transform: rotateX(0deg) rotateY(0deg); }
+  100% { transform: rotateX(720deg) rotateY(720deg); }
+  }
+  .rolling {
+      animation: roll 2s ease-out;
+   }
+   body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0;
+  }
 
 header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em;
+background-color: #333;
+color: #fff;
+text-align: center;
+padding: 0.1em;
 }
 
 section {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+max-width: 800px;
+margin: 0 auto;
+padding: 20px;
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+background-color: #333;
+color: #fff;
+text-align: center;
+padding: 0.1em;
+position: fixed;
+bottom: 0;
+width: 100%;
 }
 
-
 * {
-    font-family: Helvetica, Arial, sans-serif;
-    text-align: center;
-  }
-  button {
-    background-color: rgb(82, 186, 179);
-    border-radius: 6px;
-    border: none;
-    color: rgb(255, 255, 255);
-    padding: 10px;
-    text-transform: uppercase;
-    width: 200px;
-    cursor: pointer;
-  }
-  #placeholder {
-    height: 50px;
-    width: 50px;
-    padding: 50px;
-    margin: 100px ;
-    border: 1px solid gray;
-    border-radius: 10px;  
-    font-size:80px;
-  }
+font-family: Helvetica, Arial, sans-serif;
+text-align: center;
+font-size: 15px
 
-  de{
-    padding: 10 10 10 10px;
-  }
-  
+}
+#game {
+position: relative;
+display: inline-block;
+width: 300px;
+height: 300px;
+margin: 20px auto 40px;
+box-shadow: 0 1px 15px #222;
+background-color: #f8fafc; /* Couleur de fond */
+border-radius: 10px; /* Coins arrondis */
+border: 5px solid #fff; /* Bordure blanche */
+color: #060606; /* Couleur du texte */
+text-align: center; /* Centrage du contenu */
+font-family: 'Arial', sans-serif; /* Police de caractères */
+font-size: 20px
+}
+
+#game:after {
+content: '\2660'; /* Ajoute un symbole de pic */
+font-size: 40px; /* Taille du symbole */
+position: static;
+color: #050505; /* Couleur du symbole */
+bottom: 10px;
+}
+
+button {
+position: relative;
+top:10px;
+left:10px;
+background-color: rgb(240, 10, 14) !important;
+border-radius: 6px;
+border: none;
+color: rgb(255, 255, 255);
+padding: 10px;
+text-transform: uppercase;
+width: 200px;
+cursor: pointer;
+box-shadow: 1px 3px #50514F;
+outline: none;
+transition: .3s; 
+}
+button:hover, button:active {
+outline: none;
+background: #50514F;
+cursor: pointer;
+transform: translateY(5px);
+}
+#placeholder {
+height: 50px;
+width: 100px;
+padding: 50px;
+margin: 100px ;
+font-size:80px;
+}
+#inst{
+margin-top: 100px !important;
+}
+
+.de{
+padding: 10 10 10 10px;
+}
